Updated Handlebars navbar, some more layout issues on the Route Planner

--- a/application/public/css/styles.css
+++ b/application/public/css/styles.css
@@ -214,6 +214,7 @@ input[type="time"] {
 }
 #planner-results-container {
     transition: 1s;
+    overflow-y: scroll;
 }
 #planner-results-panel {
     display: grid;
